--- a/html/index.html
+++ b/html/index.html
@@ -17,16 +17,18 @@
                     <a href="../html/index.html">Fokir</a>
                 </div>
                 <div class="nav">
-                    <ul>
-                        <li><a href="" class="active">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Portfolio</a></li>
-                        <li><a href="">Testimonial</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Contact</a></li>
+                    <ul class="navbar">
+                        <li ><a href="" class="active">Home</a></li>
+                        <li ><a href="">About</a></li>
+                        <li ><a href="">Services</a></li>
+                        <li ><a href="">Portfolio</a></li>
+                        <li ><a href="">Testimonial</a></li>
+                        <li ><a href="">Blog</a></li>
+                        <li ><a href="">Contact</a></li>
                     </ul>
+                    <i class="fas fa-solid fa-bars all-options"></i>
                 </div>
+                
             </div>
             <div class="landing">
                 <h3>Hello i'm</h3>
@@ -86,7 +88,7 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <i class="fas fa-solid fa-pen-ruler"></i>
+                        <i class="fas fa-solid fa-pen"></i>
                         <h3>UI/UX DESIGN</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, aut.</p>
                     </div>
@@ -101,7 +103,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, aut.</p>
                     </div>
                     <div class="card">
-                        <i class="fas fa-solid fa-pen-ruler"></i>
+                        <i class="fas fa-regular fa-window-restore"></i>
                         <h3>TESTER</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, aut.</p>
                     </div>
@@ -301,10 +303,10 @@
                     </div>
                 </div>
                 <form action="">
-                    <input type="text" placeholder="Name" name="useName" class="text textt">
-                    <input type="email" placeholder="Email" name="email" class="text">
-                    <input type="text" placeholder="Subject" name="sub" class="txt">
-                    <textarea name="message" id="" placeholder="Message for me"></textarea>
+                    <input type="text" id="name" placeholder="Name" name="useName" class="text textt">
+                    <input type="email" id="email" placeholder="Email" name="email" class="text">
+                    <input type="text" id="Subject" placeholder="Subject" name="sub" class="txt">
+                    <textarea name="message" id="message" placeholder="Message for me"></textarea>
                     <button type="submit">SEND MESSAGE</button>
                 </form>
             </div>
